reglage media queries height and add title

--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
     <div id="fullpage">
        <div class="section un">
         <header>
-            <h1>CMonManga</h1>
+            <div class="title-un">
+                <h1>CMonManga</h1>
+            </div>           
+            <div class="title-deux">
+                <h2>Créez vôtre propre univer</h2>
+            </div>
         </header>
         <main>
+            
+            
             <div class="items">
                 <div class="item active">
                     <h2>Petit pas</h2>
