remplissage espace vide par une image

--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
                             les retours de nos clients.
                         </p>
                     </div>
+                    <div class="mid-steps trois-img-container">
+                        <img src="./assets/img/mid-steps.jpeg" alt="marche_vers_une_sortie_lumineuse">
+                    </div>
                     <div>
                         <h3>Passez une heure par semaine avec un professionnel de la rédaction pour avancer en toute
                             confiance.</h3>
@@ -228,7 +231,7 @@
                                 disponible aux editions posterify.</span>
                         </h4>
                     </div>
-                    <div class="guy_writting">
+                    <div class="guy_writting trois-img-container">
                         <img  src="./assets/img/remote-learning.webp" alt="garçon_refigeant_sur_un_carnet">
                     </div>
                     <div>
