retravaille position titre h4 section 3

--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
             </div>
             <div class="trois-right-block">
                 <div class="satisfied-client">
-                    <div>
+                    <div class="avis-top">
+                        <h3>Avis sur l'appuie de nos mentor pour vos réalisations </h3>
                         <h4>Le soutient de mon mentor auteur pitcheur Emile Roger m'a permis de mieux comprendre comment
                             réalisé la chronologie de mon histoire
                             et même faire des entremelements complexe dans celle-ci sans faire perdre le fil au lecteur
@@ -234,7 +235,7 @@
                     <div class="guy_writting trois-img-container">
                         <img  src="./assets/img/remote-learning.webp" alt="garçon_refigeant_sur_un_carnet">
                     </div>
-                    <div>
+                    <div class="avis-bottom">
                         <h4>Avoir l'appuie d'un professionnel m'a énormement aider dans la réalisation de mon contenu
                             web.En fixant des objectifs chaques semaines
                             cela m'a permis d'adopter un modèle de travail et une rigueur que j'avais du mal à respecter
@@ -246,7 +247,7 @@
                             sans avoir a me soucier de l'organisation.<br>
                             <span class="client">Merci à CMonHistoire et l'accompagnement de mon mentor grâce a qui j'ai
                                 pu adopter une logique de travail que je conserverai toute ma vie.</span><br>
-                            <span class="client">Gerôme lefoeuvre.Rédacteur de contenu web chez blog4u</span>
+                            <span class="client">Gerôme lefoeuvre.Rédacteur de contenu web chez blog4u.</span>
 
                         </h4>
                     </div>
