section quatre grands pas

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             en passant par des scripts de théatre, ou des histoires originale de manga, de la
                             science fiction à la biographie en croisant la route d'histoire mystérieuse ou
                             effrayantes.
-                            Nos professionel on mis à vôtre disposition des productions en tout genre pour vous
+                            Nos professionels ont mis à vôtre disposition des productions en tout genre pour vous
                             permettre de trouver l'inspiration et crée vôtre propre univer en rendant vos
                             personnages réaliste et uniques
                             et vos histoires attrayantes. </p>
@@ -221,7 +221,7 @@
             <div class="trois-right-block">
                 <div class="satisfied-client">
                     <div class="avis-top">
-                        <h3>Avis sur l'appuie de nos mentor pour vos réalisations </h3>
+                        <h3>Avis sur l'appuie de nos mentor pour vos réalisations rédactionnels </h3>
                         <h4>Le soutient de mon mentor auteur pitcheur Emile Roger m'a permis de mieux comprendre comment
                             réalisé la chronologie de mon histoire
                             et même faire des entremelements complexe dans celle-ci sans faire perdre le fil au lecteur
@@ -233,7 +233,7 @@
                         </h4>
                     </div>
                     <div class="guy_writting trois-img-container">
-                        <img  src="./assets/img/remote-learning.webp" alt="garçon_refigeant_sur_un_carnet">
+                        <img src="./assets/img/remote-learning.webp" alt="garçon_refigeant_sur_un_carnet">
                     </div>
                     <div class="avis-bottom">
                         <h4>Avoir l'appuie d'un professionnel m'a énormement aider dans la réalisation de mon contenu
@@ -256,7 +256,71 @@
         </div>
     </div>
     <div class="section quatre" id="quatre">
-        grands
+        <h2>Grands pas</h2>
+        <div class="container-section-four">
+            <div class="quatre-left-block">
+                <div>
+                    <h3>Nôtre formule "grands pas" en plus d'offrir tout les avantages sus-mentionnés vous offre un
+                        accompagnement
+                        professionnel à la réalisation graphique de vos oeuvres.
+                    </h3>
+                    <p>Avec nôtre formule grands pas en plus d'un soutien à la réalisation de vos oeuvres d'un point de
+                        vu rédactionnel et de toutes les ressources
+                        tout forfaits,bénéficiez d'un accompagnement professionnel au niveau graphique.Bénéficiez de
+                        l'apport d'un expert pour vous permettre de maîtriser
+                        les codes graphique que vous aurez choisis.Du style bande déssiné type européenne, manga ,au
+                        style réaliste, anamorphique ou abstrait, du portrait à l'architectural
+                        nos professionnels sauront vous accompagnez et vous aider dans la maîtrise des codes graphique
+                        en respectant vos attentes et vôtre style.
+                    </p>
+                </div>
+                <div class="quatre-left_block_img">
+                    <img src="./assets/img/cours_dessin_1.jpg" alt="different_dessin_noir_et_blanc">
+                </div>
+                <div>
+                    <h3>Profitez de l'éxpertise d'un professionnel du dessin</h3>
+                    <p>>Profiter de l'éxpertise d'un professionnel du dessin une heure par semaine afin de travailler vôtre style 
+                        en toute sérénité.Apprenez ou approfondissez vos connaissances avec un expert confirmé explorer tout genre de style ou approfondissez celui de vôtre choix, 
+                    profitez d'un accompagnement quotidien et fixez vous de nouveau objectifs chaque semaine pour réalisé vos plus belles oeuvre.</p>
+                </div>
+            </div>
+
+            <div class="quatre-right-block">
+                <div class="quatre-inverted-radius"></div>
+                <div class="satisfied-client">
+                    <div class="avis-top">
+                        <h3>Avis sur l'appui de nos mentor pour vos réalisations graphique</h3>
+                        <p>J'avais du mal à maitriser les codes graphique pour la réalisation de mon manga.Je trouvais
+                            mon pitch très interessant
+                            mais j'avais peur de gâcher tout le travail rédactionnel avec des planches
+                            ratées.Heureusement en me tournant vers CMonHistoire
+                            j'ai put bénéficier de l'appuie d'un professionnel du métier et ainsi atteindre un niveau
+                            graphique au delà de mes ésperance pour donner
+                            vie à mes personnage ,respecter les codes et les dimensions pour avoir un rendu graphique à
+                            la hauteur de la qualitée de mon histoire.</p>
+                        <span class="client">Merci à mon mentor mangaka professionnel shoji-san grâce a qui j'ai pu
+                            publier mon manga.</span><br>
+                        <span class="client">Oliver sampedro jeune pouce mangaka auteur de "le ciel et nous" publié aux
+                            éditions ki-&-toon</span>
+                    </div>
+                    <div class="quatre-right-block-img">
+                        <img src="./assets/img/different_styles_draw.png" alt="different_style_de_dessin">
+                    </div>
+                    <div class="avis-bottom">
+                        <p>Baignant dans l'illustration depuis tout jeune j'avais déjà réaliser de nombreuses oeuvres graphique dans divers style et je m'étais lancer pour objectif après avoir eu mon premier enfant 
+                            de crée pour lui un ouvrage illustré dans un style plus enfantin que je ne connaissait pas du tout,c'est donc logiquement que je me suis tourné 
+                            vers CMonHistoire et cette formule grand pas qui m'a permis avec l'aide de mes mentors graphique et redactionnel de pouvoir réalisé cet objectif 
+                            si important pour moi.Après avoir fini mon premier ouvrage de ce type j'envisage d'en faire d'autre grâce à la methodologie acquise avec le travail réalisé
+                            en commun avec mes mentors je suis certains de pouvoir realisé de nouveaux défis.
+                        </p>
+                        <span class="client">Merci à mes mentors et à CMonHistoire c'est un bonheur de pouvoir lire et montrer mes propres histoires à mon enfant</span>
+                        <span class="client">Samy Benkelboub un papa heureux.</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
     </div>
     <div class="section cinq" id="cinq">
         géants
